pagination alignment bugfix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,6 +526,7 @@ p.author-bio {
 
 .pagination > .active {
 	padding: 15px;
+	line-height: 2px; 
 }
 
 .pagination li.active {
